--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -67,5 +67,7 @@
 <filter-name>characterEncodingFilter</filter-name>
 <url-pattern>/*</url-pattern>
 </filter-mapping>
-
+    <welcome-file-list>
+        <welcome-file>jsp/in1.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
